# ordning

./: .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json  playwright.config.js
docs/: APPIMAGE_PORTABILITY.md  ARCHITECTURE.md  ENCRYPTION_FEASIBILITY.md  HANDOFF.md  README.md  STYLE.md
frontend/: index.html
frontend/src/: main.js  state.js
frontend/src/components/: unlock-screen.js
frontend/src/i18n/: strings.js
frontend/src/main/: app-session.js  bootstrap.js  close-guard.js  context-menu-guard.js  event-copy-paste-actions.js  event-copy-paste-geometry.js  event-copy-paste-preview.js  event-copy-paste.js  event-highlight.js  event-mutations-delete-actions.js  event-mutations-recurrence.js  event-mutations-reschedule-actions.js  event-mutations-store.js  event-mutations.js  invoke.js  keyboard-shortcuts.js  manual-save.js  settings-dialog.js  settings.js  shell-dom.js  sidebar-controller.js  toolbar-controller.js  week-render.js  week-view-controller.js
frontend/src/styles/: components.css  event-form.css  export-dialog.css  import-dialog.css  layout.css  pickers.css  reset.css  search.css  settings-dialog.css  sidebar-calendar-list.css  sidebar-create-dialog.css  sidebar-mini-month.css  sidebar-shell.css  sidebar.css  toolbar.css  unlock-screen.css  variables.css  week-view.css
frontend/test/: tauri-calendar-group-mock.js  tauri-import-export-mock.js  tauri-mock-recurrence.js  tauri-mock-seed.js  tauri-mock.js  tauri-persistence-mock.js  tauri-week-span-mock.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: calendar_cmds.rs  event_cmds.rs  io_cmds.rs  mod.rs  persistence_cmds.rs  settings_cmds.rs  view_cmds.rs
src-tauri/src/commands/io_cmds/: import_file.rs  import_persistence.rs  path_state.rs
src-tauri/src/commands/view_cmds/: tests.rs
src-tauri/src/import_export/: importer.rs
src-tauri/src/models/: app_data.rs  calendar.rs  event.rs  mod.rs  recurrence.rs  schema.rs
src-tauri/src/recurrence/: mod.rs  tests.rs
src-tauri/src/storage/: encryption.rs  json_store.rs  mod.rs
(+69 files in other folders)
