[package]
name = "ordning"
version = "0.6.0"
description = "Ordning calendar app"
authors = ["you"]
edition = "2021"

[lib]
name = "ordning_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2"
uuid = { version = "1.10", features = ["serde", "v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
webkit2gtk = "2.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
